--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -166,29 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gamma of 3.5 is: 3.32335043007\n",
-      "frac_diff ="
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown format code 'f' for object of type 'str'",
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-3-6792528fc29c>, line 60)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-6fa7ab5b685a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[1;34m'Gamma of'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'is:'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfrac\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'yes'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m         \u001b[1;32mprint\u001b[0m \u001b[1;34m'frac_diff ='\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"{:0.7f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrac_diff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"%\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'str'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-6792528fc29c>\"\u001b[0;36m, line \u001b[0;32m60\u001b[0m\n\u001b[0;31m    gamma(t) = total,last_total\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
@@ -244,19 +233,29 @@
     "                total += (dx/6)*(h(x,t) +h(x+dx,t) +4*h((2*x+dx)/2,t))\n",
     "                if x == 900:\n",
     "                    last_total = total\n",
-    "            return float(total)\n",
+    "            return float(total), last_total\n",
     "    else:\n",
     "        return 'Please enter a value between 1 and 100.'\n",
     "    \n",
     "if __name__ ==\"__main__\":\n",
     "    t = (7./2)\n",
     "    import doctest\n",
-    "    doctest.testmod()    \n",
-    "    print 'Gamma of',t,'is:',gamma(t)\n",
+    "    doctest.testmod() \n",
+    "    gamma(t) = total,last_total\n",
+    "    print 'Gamma of',t,'is:',total\n",
     "    if frac == 'yes':\n",
-    "        print 'frac_diff =', \"{:0.7f}\".format(frac_diff()*100),\"%\"\n",
+    "        print 'frac_diff =', frac_diff\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
